src/index.css
/* ... */
/* Any element with the class "light--hidden" will be hidden when the site is set to Light Mode */
:root[color-mode="light"] .light--hidden {
    display: none;
}

/* Any element with the class "dark--hidden" will be hidden when the site is set to Dark Mode */
:root[color-mode="dark"] .dark--hidden {
    display: none;
}

/* Overall font definitions */
@import url("https://fonts.googleapis.com/css2?family=Cardo:wght@700&family=Josefin+Sans&display=swap");
/* @import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@600&family=Source+Sans+Pro&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Oswald:wght@500&family=Quattrocento&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Cormorant+Garamond:wght@600&family=Proza+Libre&display=swap'); */
/* @import url('https://fonts.googleapis.com/css2?family=Cinzel:wght@600&family=Fauna+One&display=swap'); */

h1,
h2,
h3,
h4,
h5,
h6 {
  font-family: "Cardo", serif;
}

body,
button,
input,
select,
textarea {
  font-family: "Josefin Sans", sans-serif;
  font-size: 1em;
  -webkit-font-smoothing: antialiased;
  -moz-osx-font-smoothing: grayscale;
  background-color: var(--main-bg-color);
  color: var(--main-font-color);
}

html {
  box-sizing: border-box;
}

*,
*:before,
*:after {
  box-sizing: inherit;
}

/* Link handling */
a {
  color: inherit;
}

.content * a {
  text-decoration: underline;
}

table * a {
    color: var(--secondary-color-3);
    text-decoration: underline;
}

.navbar {
    background-color: var(--main-bg-color);
}

a.navbar-item:hover {
    background-color: var(--secondary-color-3-bg);
}

.navbar-item {
    color: var(--main-font-color);
}

.title, .subtitle {
    color: var(--main-heading-color);
}

.content .title, .content .subtitle {
    color: var(--main-heading-color);
}


.checkbox:hover, .radio:hover {
    color: var(--secondary-font-color);
}

/* Add a little bit of space after checkboxes and radio buttons */
input[type="checkbox"],
input[type="radio"] {
  margin-right: 0.25em;
}

strong {
    color: var(--main-font-color);
}

.label {
    color: var(--main-fg-color);
}

.footer {
    background-color: var(--secondary-color-3-bg);
}

.modal-card-head, .modal-card-foot {
    background-color: var(--secondary-color-3-bg);
}

.modal-card-body {
    background-color: var(--main-bg-color);
}

.modal-card-body h2 {
    color: var(--main-font-color);
}

.modal-card-title {
    color: var(--main-fg-color);
}

.card {
    background-color: var(--main-bg-color);
    box-shadow: 0 0.5em 1em -0.125em var(--dropshadow-target-start), 0 0 0 1px var(--dropshadow-target-end);
    color: var(--main-font-color);
}

.card-header {
    box-shadow: 0 0.125em 0.25em var(--dropshadow-target-start);
}

.card-header-title {
    color: var(--main-font-color);
}

/* Only used to colour buttons until I can figure out how to override Bulma colours */
.apButton {
  background: linear-gradient(
    180deg,
    var(--secondary-color-3-lighter) 0%,
    var(--secondary-color-3) 100%
  );
  color: var(--high-contrast-font-color);
}

.apButton:hover {
  background: var(--main-fg-color);
  /* color: var(--high-contrast-font-color); */
}

.apButtonAlert {
  background: linear-gradient(
    180deg,
    var(--secondary-color-1-lighter) 0%,
    var(--secondary-color-1) 100%
  );
  color: var(--high-contrast-font-color);
}

.apButtonAlert:hover {
  background: var(--main-fg-color);
  /* color: var(--main-font-color); */
}

.apButtonNeutral {
    background: linear-gradient(
      180deg,
      var(--secondary-color-3-bg) 0%
      var(--main-bg-color) 100%,
    );
    color: var(--main-font-color);
  }

  .apButtonNeutral:hover {
    background: var(--bg-color2);
    color: var(--main-font-color);
  }


.inlineButton {
  margin-left: 1em;
}

/* Outlines the chosen game on the Games page */
.theMetaGame {
  border: 1px solid var(--main-fg-color);
}

.lastMove {
  border: 1px solid var(--main-fg-color);
}

/* Used to create headings with lines on either side */
.lined {
  width: 100%;
  margin-left: auto;
  margin-right: auto;
  color: var(--main-fg-color);
  display: block;
  position: relative;
  text-align: left;
  z-index: 1;
}

.lined:before {
  border-top: 2px solid var(--main-fg-color);
  content: "";
  position: absolute;
  top: 12px;
  left: 0;
  width: 100%;
  z-index: -1;
}

.lined span {
  background: var(--main-bg-color);
  padding: 0em 0.5em;
  margin: 0em 1.5em;
}

/* Only used on the dashboard */
.apBullet {
  color: var(--secondary-color-1);
  font-size: 10px;
  position: relative;
  bottom: 2px;
  padding-right: 0.7em;
}

/* Leaving the board and stack styles here for now until I better understand it */
.board {
  display: flex;
  background-color: #fff;
  align-items: flex-start;
  padding: 1em;
}

.board > svg * text {
    cursor: default;
    user-select: none;
}

.unZoomedBoard > svg {
  max-height: 600px;
}

.boardButtons {
  overflow: hidden;
}

.align-right {
  float: right;
}

.stackboard {
  flex: 8;
}

.stack {
  padding-top: 2em;
  padding-right: 1.5em;
  flex: 1;
}

/* Leaving this also for now */
.player {
  display: flex;
  align-items: center;
  padding-bottom: 0.5em;
}

th .player {
  justify-content: center;
}

/* For some reason, .playerImage and .toMoveImage are necessary.
 * Putting the height and width in the image does not appear to be working correctly.
 */
.playerImage {
  height: 0.8rem;
  width: 0.8rem;
}

.toMoveImage {
  height: 1.15rem;
  width: 1.15rem;
}

/* Colours the "board state" indicator */
.historyState {
  color: var(--secondary-color-2);
}

.currentState {
  color: var(--main-font-color);
}

.exploreState {
  color: var(--secondary-color-3);
}

.historyState,
.currentState,
.exploreState {
  font-size: larger;
  font-weight: bolder;
  padding-bottom: 1em;
}

/* Stuff for the move history tree. Leaving most of this for now. */
.move {
  max-width: 15em;
}

.gameMove {
  display: inline;
}

.actualMove {
  font-weight: bold;
}
/* ... */

